# rpi-picow-freertos-ntp-server

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.md  lwipopts.h
src/: FreeRTOSConfig.h  main.c
